# solar

./: .gitattributes  .gitignore  PROJECT_CHECKLIST.md  README.md  pyproject.toml  requirements-kaggle.txt  requirements.txt
configs/: data.yaml  data_kaggle.yaml  deepsolareye.yaml  fusion.yaml  inference.yaml  train_regression.yaml  train_regression_full.yaml  train_regression_image_only.yaml  train_regression_image_only_full.yaml  train_regression_transfer.yaml  train_regression_transfer_full.yaml  train_rgb.yaml  train_rgb_full.yaml  train_rgb_kaggle_smoke.yaml  train_rgb_multitask.yaml  train_rgb_multitask_full.yaml  train_thermal.yaml  train_thermal_full.yaml  trsai.yaml  villegas.yaml
data/splits/: cross_dataset_eval.json  deepsolareye_split.json  (+2 more)
notebooks/: 01_data_audit.ipynb  02_dataset_alignment.ipynb  02_split_check.ipynb  03_rgb_baseline.ipynb  04_electrical_regression.ipynb  05_thermal_hotspot.ipynb  06_error_analysis.ipynb
scripts/: _bootstrap.py  build_metadata.py  create_splits.py  download_data.py  evaluate_deepsolareye.py  evaluate_regression.py  evaluate_rgb.py  evaluate_thermal.py  evaluate_trsai.py  evaluate_villegas.py  export_report_assets.py  generate_demo_outputs.py  measure_latency.py  preprocess_deepsolareye.py  preprocess_trsai.py  preprocess_villegas.py  run_data_audit.py  run_fusion.py  run_inference.py  train_deepsolareye.py  train_fusion.py  train_rgb_electrical.py  train_rgb_powerloss.py  train_thermal_hotspot.py  train_trsai.py  train_villegas.py
src/: __init__.py
tests/: test_datasets.py  test_pipeline.py  test_schema.py
(+40 files in other folders)
