[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-pv-monitoring"
version = "0.1.0"
description = "Modular PV monitoring with RGB power-loss, RGB electrical regression, thermal hotspot detection, and decision fusion."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wail Ouaret" }
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

